@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added awarn() to API::Std for warnings.
     * Parse Numeric:432.
     * Parse Numeric:433.
     * Added nick() to API::IRC.
